sunvox_lib/headers/sunvox.h


#define NOTECMD_NOTE_OFF	128
#define NOTECMD_ALL_NOTES_OFF	129 
#define NOTECMD_CLEAN_SYNTHS	130 
#define NOTECMD_STOP		131
#define NOTECMD_PLAY		132
#define NOTECMD_SET_PITCH       133 
#define NOTECMD_CLEAN_MODULE    140 
typedef struct
{
    uint8_t	note;           
    uint8_t	vel;            
    uint16_t	module;         
    uint16_t	ctl;            
    uint16_t	ctl_val;        
} sunvox_note;
#define SV_INIT_FLAG_NO_DEBUG_OUTPUT 		( 1 << 0 )
#define SV_INIT_FLAG_USER_AUDIO_CALLBACK 	( 1 << 1 ) 
#define SV_INIT_FLAG_OFFLINE			( 1 << 1 ) 
#define SV_INIT_FLAG_AUDIO_INT16 		( 1 << 2 ) 
#define SV_INIT_FLAG_AUDIO_FLOAT32 		( 1 << 3 ) 
#define SV_INIT_FLAG_ONE_THREAD			( 1 << 4 ) 
#define SV_TIME_MAP_SPEED	0
#define SV_TIME_MAP_FRAMECNT	1
#define SV_MODULE_FLAG_EXISTS 		( 1 << 0 )
#define SV_MODULE_FLAG_GENERATOR 	( 1 << 1 ) 
#define SV_MODULE_FLAG_EFFECT 		( 1 << 2 ) 
#define SV_MODULE_FLAG_MUTE		( 1 << 3 )
#define SV_MODULE_FLAG_SOLO		( 1 << 4 )
#define SV_MODULE_FLAG_BYPASS		( 1 << 5 )
#define SV_MODULE_INPUTS_OFF 	16
#define SV_MODULE_INPUTS_MASK 	( 255 << SV_MODULE_INPUTS_OFF )
#define SV_MODULE_OUTPUTS_OFF 	( 16 + 8 )
#define SV_MODULE_OUTPUTS_MASK 	( 255 << SV_MODULE_OUTPUTS_OFF )
int sv_init( const char* config, int freq, int channels, uint32_t flags ) SUNVOX_FN_ATTR;
int sv_deinit( void ) SUNVOX_FN_ATTR;
int sv_get_sample_rate( void ) SUNVOX_FN_ATTR;
int sv_update_input( void ) SUNVOX_FN_ATTR;
int sv_audio_callback( void* buf, int frames, int latency, uint32_t out_time ) SUNVOX_FN_ATTR;
int sv_audio_callback2( void* buf, int frames, int latency, uint32_t out_time, int in_type, int in_channels, void* in_buf ) SUNVOX_FN_ATTR;
int sv_open_slot( int slot ) SUNVOX_FN_ATTR;
int sv_close_slot( int slot ) SUNVOX_FN_ATTR;
int sv_lock_slot( int slot ) SUNVOX_FN_ATTR;
int sv_unlock_slot( int slot ) SUNVOX_FN_ATTR;
int sv_load( int slot, const char* name ) SUNVOX_FN_ATTR;
int sv_load_from_memory( int slot, void* data, uint32_t data_size ) SUNVOX_FN_ATTR;
int sv_save( int slot, const char* name ) SUNVOX_FN_ATTR;
void* sv_save_to_memory( int slot, size_t* size ) SUNVOX_FN_ATTR;
int sv_play( int slot ) SUNVOX_FN_ATTR;
int sv_play_from_beginning( int slot ) SUNVOX_FN_ATTR;
int sv_stop( int slot ) SUNVOX_FN_ATTR;
int sv_pause( int slot ) SUNVOX_FN_ATTR;
int sv_resume( int slot ) SUNVOX_FN_ATTR;
int sv_sync_resume( int slot ) SUNVOX_FN_ATTR;
int sv_set_autostop( int slot, int autostop ) SUNVOX_FN_ATTR;
int sv_get_autostop( int slot ) SUNVOX_FN_ATTR;
int sv_end_of_song( int slot ) SUNVOX_FN_ATTR;
int sv_rewind( int slot, int line_num ) SUNVOX_FN_ATTR;
int sv_volume( int slot, int vol ) SUNVOX_FN_ATTR;
int sv_set_event_t( int slot, int set, int t ) SUNVOX_FN_ATTR;
int sv_send_event( int slot, int track_num, int note, int vel, int module, int ctl, int ctl_val ) SUNVOX_FN_ATTR;
int sv_get_current_line( int slot ) SUNVOX_FN_ATTR; 
int sv_get_current_line2( int slot ) SUNVOX_FN_ATTR; 
int sv_get_current_signal_level( int slot, int channel ) SUNVOX_FN_ATTR; 
const char* sv_get_song_name( int slot ) SUNVOX_FN_ATTR;
int sv_set_song_name( int slot, const char* name ) SUNVOX_FN_ATTR;
int sv_get_base_version( int slot ) SUNVOX_FN_ATTR;
int sv_get_song_bpm( int slot ) SUNVOX_FN_ATTR;
int sv_get_song_tpl( int slot ) SUNVOX_FN_ATTR;
uint32_t sv_get_song_length_frames( int slot ) SUNVOX_FN_ATTR;
uint32_t sv_get_song_length_lines( int slot ) SUNVOX_FN_ATTR;
int sv_get_time_map( int slot, int start_line, int len, uint32_t* dest, int flags ) SUNVOX_FN_ATTR;
int sv_new_module( int slot, const char* type, const char* name, int x, int y, int z ) SUNVOX_FN_ATTR; 
int sv_remove_module( int slot, int mod_num ) SUNVOX_FN_ATTR; 
int sv_connect_module( int slot, int source, int destination ) SUNVOX_FN_ATTR; 
int sv_disconnect_module( int slot, int source, int destination ) SUNVOX_FN_ATTR; 
int sv_load_module( int slot, const char* file_name, int x, int y, int z ) SUNVOX_FN_ATTR;
int sv_load_module_from_memory( int slot, void* data, uint32_t data_size, int x, int y, int z ) SUNVOX_FN_ATTR;
int sv_sampler_load( int slot, int mod_num, const char* file_name, int sample_slot ) SUNVOX_FN_ATTR;
int sv_sampler_load_from_memory( int slot, int mod_num, void* data, uint32_t data_size, int sample_slot ) SUNVOX_FN_ATTR;
int sv_sampler_par( int slot, int mod_num, int sample_slot, int par, int par_val, int set ) SUNVOX_FN_ATTR;
int sv_metamodule_load( int slot, int mod_num, const char* file_name ) SUNVOX_FN_ATTR;
int sv_metamodule_load_from_memory( int slot, int mod_num, void* data, uint32_t data_size ) SUNVOX_FN_ATTR;
int sv_vplayer_load( int slot, int mod_num, const char* file_name ) SUNVOX_FN_ATTR;
int sv_vplayer_load_from_memory( int slot, int mod_num, void* data, uint32_t data_size ) SUNVOX_FN_ATTR;
int sv_get_number_of_modules( int slot ) SUNVOX_FN_ATTR;
int sv_find_module( int slot, const char* name ) SUNVOX_FN_ATTR;
uint32_t sv_get_module_flags( int slot, int mod_num ) SUNVOX_FN_ATTR; 
int* sv_get_module_inputs( int slot, int mod_num ) SUNVOX_FN_ATTR;
int* sv_get_module_outputs( int slot, int mod_num ) SUNVOX_FN_ATTR;
const char* sv_get_module_type( int slot, int mod_num ) SUNVOX_FN_ATTR;
const char* sv_get_module_name( int slot, int mod_num ) SUNVOX_FN_ATTR;
int sv_set_module_name( int slot, int mod_num, const char* name ) SUNVOX_FN_ATTR;
uint32_t sv_get_module_xy( int slot, int mod_num ) SUNVOX_FN_ATTR;
int sv_set_module_xy( int slot, int mod_num, int x, int y ) SUNVOX_FN_ATTR;
int sv_get_module_color( int slot, int mod_num ) SUNVOX_FN_ATTR;
int sv_set_module_color( int slot, int mod_num, int color ) SUNVOX_FN_ATTR;
uint32_t sv_get_module_finetune( int slot, int mod_num ) SUNVOX_FN_ATTR;
int sv_set_module_finetune( int slot, int mod_num, int finetune ) SUNVOX_FN_ATTR;
int sv_set_module_relnote( int slot, int mod_num, int relative_note ) SUNVOX_FN_ATTR;
uint32_t sv_get_module_scope2( int slot, int mod_num, int channel, int16_t* dest_buf, uint32_t samples_to_read ) SUNVOX_FN_ATTR;
int sv_module_curve( int slot, int mod_num, int curve_num, float* data, int len, int w ) SUNVOX_FN_ATTR;
int sv_get_number_of_module_ctls( int slot, int mod_num ) SUNVOX_FN_ATTR;
const char* sv_get_module_ctl_name( int slot, int mod_num, int ctl_num ) SUNVOX_FN_ATTR;
int sv_get_module_ctl_value( int slot, int mod_num, int ctl_num, int scaled ) SUNVOX_FN_ATTR;
int sv_set_module_ctl_value( int slot, int mod_num, int ctl_num, int val, int scaled ) SUNVOX_FN_ATTR;
int sv_get_module_ctl_min( int slot, int mod_num, int ctl_num, int scaled ) SUNVOX_FN_ATTR;
int sv_get_module_ctl_max( int slot, int mod_num, int ctl_num, int scaled ) SUNVOX_FN_ATTR;
int sv_get_module_ctl_offset( int slot, int mod_num, int ctl_num ) SUNVOX_FN_ATTR; 
int sv_get_module_ctl_type( int slot, int mod_num, int ctl_num ) SUNVOX_FN_ATTR; 
int sv_get_module_ctl_group( int slot, int mod_num, int ctl_num ) SUNVOX_FN_ATTR;
int sv_new_pattern( int slot, int clone, int x, int y, int tracks, int lines, int icon_seed, const char* name ) SUNVOX_FN_ATTR; 
int sv_remove_pattern( int slot, int pat_num ) SUNVOX_FN_ATTR; 
int sv_get_number_of_patterns( int slot ) SUNVOX_FN_ATTR;
int sv_find_pattern( int slot, const char* name ) SUNVOX_FN_ATTR;
int sv_get_pattern_x( int slot, int pat_num ) SUNVOX_FN_ATTR;
int sv_get_pattern_y( int slot, int pat_num ) SUNVOX_FN_ATTR;
int sv_set_pattern_xy( int slot, int pat_num, int x, int y ) SUNVOX_FN_ATTR; 
int sv_get_pattern_tracks( int slot, int pat_num ) SUNVOX_FN_ATTR;
int sv_get_pattern_lines( int slot, int pat_num ) SUNVOX_FN_ATTR;
int sv_set_pattern_size( int slot, int pat_num, int tracks, int lines ) SUNVOX_FN_ATTR; 
const char* sv_get_pattern_name( int slot, int pat_num ) SUNVOX_FN_ATTR;
int sv_set_pattern_name( int slot, int pat_num, const char* name ) SUNVOX_FN_ATTR; 
sunvox_note* sv_get_pattern_data( int slot, int pat_num ) SUNVOX_FN_ATTR;
int sv_set_pattern_event( int slot, int pat_num, int track, int line, int nn, int vv, int mm, int ccee, int xxyy ) SUNVOX_FN_ATTR;
int sv_get_pattern_event( int slot, int pat_num, int track, int line, int column ) SUNVOX_FN_ATTR;
int sv_pattern_mute( int slot, int pat_num, int mute ) SUNVOX_FN_ATTR; 
uint32_t sv_get_ticks( void ) SUNVOX_FN_ATTR;
uint32_t sv_get_ticks_per_second( void ) SUNVOX_FN_ATTR;
const char* sv_get_log( int size ) SUNVOX_FN_ATTR;